# PostPilot

./: .gitignore  BUILD.md  LICENSE  QUICKSTART.md  README.md  SETUP.md  build-config.js  package.json
extension/: CONFIG.md  manifest.json
extension/src/: background.js  config.js  content.js  options.html  options.js  popup.html  popup.js  styles.css
server/: env.example  pyproject.toml
server/app/: __init__.py  config.py  deps.py  main.py
server/app/models/: schemas.py
server/app/services/: cache.py  llm_client.py  normalize.py  prompts.py  ratelimit.py
server/tests/: __init__.py
